Fixed row spacing. Draging walls works much better now.

--- a/public/styles.css
+++ b/public/styles.css
@@ -5,6 +5,9 @@
   outline: 1px solid rgb(175, 216, 248);
   display: inline-block;
 }
+.row {
+  display: flex;
+}
 
 .grid {
   align-self: center;
